--- a/style.css
+++ b/style.css
@@ -3,3 +3,81 @@ body {
   height: 100%;
   margin: 0;
 }
+
+
+
+header {
+  text-align: center;
+
+}
+
+
+h1 {
+  margin-bottom: 18px;
+  font-size: 25px;
+  font-weight: bold;
+
+}
+
+
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+nav {
+  text-align: center;
+
+}
+
+nav a {
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: grey;
+}
+
+
+figcaption {
+  font-size: 16px;
+  text-align: center;
+  margin-bottom: 10px;
+  
+
+}
+
+
+#featured-property p {
+  width: 800px;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 15px;
+
+
+
+}
+
+
+
+.footer{
+  text-align: center;
+  float: left;
+ 
+}
+
+
+
+
+#details div {
+  float: left;
+  background-color: red;
+  width: 25%;
+  font-size: 14px;
+  text-align: center;
+ 
+}
+
+
+
